@@ -1,3 +1,14 @@
+2004-01-19  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* config/sparc/sol2.h (ASM_DECLARE_OBJECT_NAME): New.  Emit
+	"tls_object" for thread-local objects.
+	* config/sparc/sparc.c (sparc_elf_asm_named_section): Emit
+	"#tls" for thread-local sections.
+	* configure.ac (thread-local checks): Specify --fatal-warnings in
+	every binutils-specific checks.  For sparc*-*-*, test whether the
+	OS is Solaris and the tools are native and act accordingly.
+	* configure: Rebuild.
+
 2004-01-19  Jeff Law  <law@redhat.com>
 
 	* contrib.texi: Update Paolo Carlini's entry.  New entries for
